<resources>
    <string name="app_name">RecipeHub</string>
    <string name="blank_avatar" />
    <string name="register">Register</string>
    <string name="yes_account">Already have an account?</string>
    <string name="login_ref"><u>Login</u></string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Username">Username</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account yet?</string>
    <string name="register_ref"><u>Register</u></string>
    <string name="registerFragment">Register</string>
    <string name="loginFragment">Login</string>
    <string name="login_bottom_nav_menu">Login</string>
    <string name="register_bottom_nav_menu">Register</string>
    <string name="profile_bottom_nav_menu">Profile</string>
    <string name="logout_bottom_nav_menu">Logout</string>
    <string name="create_bottom_nav_menu">Create</string>
    <string name="my_recipes_bottom_nav_menu">My Recipes</string>
    <string name="home_bottom_nav_menu">Home </string>
    <string name="homeFragment">Home</string>
    <string name="profileFragment">Profile</string>
    <string name="reset">Reset</string>
    <string name="submit">Update</string>
    <string name="profile_textView">Comments: %1$d | Recipes: %2$d</string>
    <string name="bootFragment">boot</string>
    <string name="home">home</string>
    <string name="createFragment" />
    <string name="recipeDetailsFragment" />
    <string name="EditFragment" />
    <string name="myRecipesFragment" />
    <string name="empty" />
</resources>