<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home_bottom_nav_menu"
        android:icon="@drawable/ic_home_bottom_nav_menu" />

    <item
        android:id="@+id/myRecipes"
        android:title="@string/my_recipes_bottom_nav_menu"
        android:icon="@drawable/ic_home_bottom_nav_menu" />

    <item
        android:id="@+id/create"
        android:title="@string/create_bottom_nav_menu"
        android:icon="@drawable/ic_create_bottom_nav_menu" />


    <item
        android:id="@+id/logout"
        android:title="@string/logout_bottom_nav_menu"
        android:icon="@drawable/ic_logout_bottom_nav_menu" />
    <item
        android:id="@+id/profile"
        android:title="@string/profile_bottom_nav_menu"
        android:icon="@drawable/ic_profile_bottom_nav_menu" />
</menu>