<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/bootFragment">

    <fragment
        android:id="@+id/createFragment"
        android:name="com.example.recipehub.fragments.CreateFragment"
        android:label="@string/createFragment" />

    <fragment
        android:id="@+id/bootFragment"
        android:name="com.example.recipehub.fragments.BootFragment"
        android:label="@string/bootFragment" >
        <action
            android:id="@+id/action_to_home"
            app:destination="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.recipehub.fragments.ProfileFragment"
        android:label="@string/profileFragment" >
    <action
        android:id="@+id/action_to_home"
        app:destination="@id/homeFragment" />
    <action
        android:id="@+id/action_to_register"
        app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_to_create"
            app:destination="@id/createFragment" />

    <action
        android:id="@+id/action_to_login"
        app:destination="@id/loginFragment" />

    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.recipehub.fragments.HomeFragment"
        android:label="@string/homeFragment" >
    <action
        android:id="@+id/action_to_register"
        app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_to_create"
            app:destination="@id/createFragment" />
    <action
        android:id="@+id/action_to_login"
        app:destination="@id/loginFragment" />
    <action
        android:id="@+id/action_to_profile"
        app:destination="@id/profileFragment" />

    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.recipehub.fragments.LoginFragment"
        android:label="@string/loginFragment">
        <action
            android:id="@+id/action_to_register"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_to_home"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_to_profile"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.recipehub.fragments.RegisterFragment"
        android:label="@string/registerFragment">
        <action
            android:id="@+id/action_to_login"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_to_home"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_to_profile"
            app:destination="@id/profileFragment" />
    </fragment>

</navigation>