<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar_imageView"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/blank_avatar"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Corner.FullCircle"
        app:srcCompat="@drawable/blank_avatar" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_inputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:boxStrokeColor="@color/rippleColor"
        app:hintTextColor="@color/rippleColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_imageView">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_editText"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="serif"
            android:gravity="center"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_inputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:boxStrokeColor="@color/rippleColor"
        app:hintTextColor="@color/rippleColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_inputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_editText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="serif"
            android:gravity="center"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:fontFamily="serif"
        android:text="@string/login"
        android:textColor="#EBEBEB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_inputLayout"
        app:rippleColor="@color/rippleColor"
        app:strokeColor="@color/rippleColor" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintVertical_bias="0.059">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/no_account_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/no_account"
            android:textColor="?attr/colorSecondary"
            app:fontFamily="serif" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ref_register_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_ref"
            android:textColor="#C4E9E7"
            android:textColorHint="?attr/colorPrimary"
            app:fontFamily="serif" />
    </LinearLayout>
    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/composeView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"/>
</androidx.constraintlayout.widget.ConstraintLayout>
